Polish post list view and accept trailing slash